# termchat-wan

./: CHANGELOG.md  Cargo.toml  README.md  build.sh
src/: action.rs  commands.rs  config.rs  events.rs  lib.rs  message.rs  renderer.rs  state.rs  ui.rs
src/commands/: send_file.rs  whisper_message.rs
