[package]
name = "termchat_wan"
version = "1.3.0"
authors = ["jason <pokersugo@gmail.com>", "lemunozm <lemunozm@gmail.com>"]
description = "Distributed WAN chat application in the terminal"
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
keywords = ["network", "chat", "wan", "terminal"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]
message-io = "0.14"
serde = { version = "1.0.124", features = ["derive"] }
#keep the same version as tui for faster compile time
crossterm = "0.18.2"
tui = { version = "0.14.0", default-features = false, features = ['crossterm', 'serde'] }
whoami = "1.1.0"
chrono = "0.4.19"
clap = "2.33.3"
unicode-width = "0.1.8"
shellwords = "1.1.0"
shellexpand = "2.1.0"
toml = "0.5.8"
dirs-next = "2.0.0"
rgb = {version="0.8.25", features=["serde"]}
resize = "0.7.0"
bincode="1.3.3"

[dev-dependencies]
rand = "0.8.3"

[features]
ui-test = []

[[bin]]
name = "app"
path = "src/bin/client.rs"


[[bin]]
name = "server"
path = "src/bin/server.rs"